--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@ngxs/store": "^3.7.6",
+    "lodash": "^4.17.21",
     "ngxs-requests-plugin": "^0.1.6",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
