--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
-    "@ngxs/store": "^3.7.6",
+    "@ngxs/store": "^3.8.1",
     "lodash": "^4.17.21",
-    "ngxs-requests-plugin": "^0.1.6",
+    "ngxs-requests-plugin": "^0.1.7-beta.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
