--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@ngxs/store": "^3.8.1",
     "lodash": "^4.17.21",
     "ngxs-requests-plugin": "^0.1.7-beta.2",
-    "rxjs": "~7.5.0",
+    "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.13.1"
   },
@@ -40,6 +40,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "^4.8.4"
+    "typescript": "^5.1.3"
   }
 }
